Fix for CSP error

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Required for hosting on GitHub Pages -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://krisheinrich.github.io 'unsafe-inline'; img-src 'self' https://krisheinrich.github.io data:">
+
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
