--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <!-- Required for hosting on GitHub Pages -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://krisheinrich.github.io 'unsafe-inline'; img-src 'self' https://krisheinrich.github.io data:">
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline'; img-src * 'self' data: ;">
 
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
