--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
       content="Web site created using create-react-app"
     />
     <!-- Required for hosting on GitHub Pages -->
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline'; img-src * 'self' data: ;">
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'; img-src * 'self' data:;">
 
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
