Add Modal component; add mailchimp embedded form in modal; add styles for mc form

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- MailChimp form styles -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,6 +30,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ground Up Dev - The Online Developer Bootcamp</title>
+    <!-- Mailchimp styles -->
+    <style type="text/css">
+      #mc_embed_signup{
+        background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;
+      }
+    </style>
     <!--
       Mailchimp pop-up sign up form for email newsletter
     -->
